--- a/index.html
+++ b/index.html
@@ -6,31 +6,92 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>부트스트랩 소개와 사용법</title>
   <style>
-    a{text-decoration: none; color: #fff;}
-    .border01{background-color: #712cf9;color:#fff;}
+    *{margin:0px;padding:0px;}
+        body{
+          font-family: "맑은 고딕",arial,sans-serif;
+          font-size:12px;
+          color:#333333;
+          background:rgb(246, 246, 246);
+        }
+        h1{ margin: 20px 0px; text-align: center;}
+        h1 img{width:160px;}
+        h2{line-height:40px;}
+
+        /* 테두리 선 */
+        .border01{
+          border-top:3px solid #712cf9;
+          border-bottom:3px solid #712cf9;
+        }
+        /* 제목 배경 */
+        .bgcolor01{background:#712cf9;}
+        dl{text-indent:10px;}
+        dt{
+          font-size:14px;
+          color:#fff;
+          padding:12px 0px;
+          font-weight: bold;
+          border-bottom:1px solid #ffffff;
+        }
+        dd{ 
+          border-bottom:1px solid #cccccc;
+          text-indent:16px;
+        }
+        dd > a{
+          display:block;
+          font-size:13px;
+          line-height:40px;
+          color:#333333;
+          text-decoration:none;
+        }
+        dd > a:hover{
+          background-color:beige;
+        }
+        footer{
+          border-top:solid 3px #9b6ff2!important;
+          background-color:#9b6ff2;
+          color:#ffffff;
+          text-align:center;
+          line-height:50px;
+        }
+        footer > address{font-style:normal;}
+
   </style>
 </head>
 <body>
+  <header>
+    <h1>
+      <p>부트스트랩 ver 5.</p><br>
+      <a href="./index.html" title="메인페이지 바로가기">
+        <img src="./Bootstrap_logo.png" alt="메인로고"></a>
+    </h1>
+  </header>
   <section class="border01">
     <dl>
-      <dt class="border01">부트스트랩 소개와 사용법</dt>
-      <dd>1.부트스트랩 소개와 사용법</dd>
-      <dd><a href="./0220/01그리드레이아웃.html" title="">2.그리드 레이아웃(반응형)</a></dd>
-      <dd><a href="./0220/02부트스트랩.html" title="">3.텍스트관련</a></dd>
-      <dd>4.테이블관련</dd>
-      <dd>5.이미지관련</dd>
-      <dd>6.점보트론</dd>
-      <dd>7.둥근모서리</dd>
-      <dd>8.경고메시지와 닫기</dd>
-      <dd>9.버튼</dd>
-      <dd>10.버튼그룹</dd>
-      <dd>11.글리프콘(그림문자)</dd>
-      <dd>12.휘자와 라벨</dd>
-      <dd>13.진행바</dd>
-      <dd>14.페이지번호</dd>
-      <dd>15.이전, 다음페이지</dd>
+      <dt class="bgcolor01">부트스트랩 - 1일차</dt>
+      <dd><a href="./0214/01Bootstrap.html" title="소개와사용">1.부트스트랩 소개와 사용법</a></dd>
+      <dd><a href="./0220/01그리드레이아웃.html" title="그리드레이아웃">2.그리드 레이아웃(반응형)</a></dd>
+      <dd><a href="./0220/02부트스트랩.html" title="텍스트관련">3.텍스트관련</a></dd>
+      <dd><a href="./0220/03부트스트랩_테이블.html" title="테이블관련">테이블관련</a></dd>
+      <dd><a href="./0220/04부트스트랩_이미지.html" title="이미지관련">이미지관련</a></dd>
+      <dd><a href="./0220/exec(반응형그리드 갤러리).html" title="실습">실습_반응형 갤러리 구현</a></dd>
+      
+      <dt class="bgcolor01">부트스트랩 - 2일차</dt>
+      <dd><a href="./0221/05_점보트론.html" title="점보트론">6.점보트론</a></dd>
+      <dd><a href="./0221/07_경고메시지와 닫기.html" title="경고메시지와닫기">7.경고메시지와 닫기</a></dd>
+      <dd><a href="./0221/08_버튼과 09버튼그룹.html" title="버튼과 버튼그룹">8.버튼과 9.버튼그룹</a></dd>
+      <dd><a href="./0221/exec01_login.html" title="모달로그인">실습_모달 로그인</a></dd>
+      
+      <dt class="bgcolor01">부트스트랩 - 3일차</dt>
+      <dd><a href="./0222/10_icon.html" title="아이콘">10.SVG와 아이콘(그림문자) 삽입</a></dd>
+      <dd><a href="./0222/11_badge_label.html" title="휘장과라벨">11.휘장(badge)과 라벨</a></dd>
+      <dd><a href="./0222/12_Progress-bar.html"  title="진행바">12.진행바(Progress)</a></dd>
+      <dd><a href="./0222/13_14_pagination.html" title="페이지네이션">13.페이지번호 14.이전,다음페이지</a></dd>
+      <dd><a href="./0222/exec01.html" title="실습">실습_게시판 구현하기</a></dd>
     </dl>
 
   </section>
+  <footer>
+    <address>Copyright&copy;2023 부트스트랩 학습페이지 allrights reserved.</address>
+  </footer>
 </body>
 </html>
