부트스트랩 목차

--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@
   <section class="border01">
     <dl>
       <dt class="bgcolor01">부트스트랩 - 1일차</dt>
-      <dd><a href="./0214/01Bootstrap.html" title="소개와사용">1.부트스트랩 소개와 사용법</a></dd>
-      <dd><a href="./0220/01그리드레이아웃.html" title="그리드레이아웃">2.그리드 레이아웃(반응형)</a></dd>
-      <dd><a href="./0220/02부트스트랩.html" title="텍스트관련">3.텍스트관련</a></dd>
-      <dd><a href="./0220/03부트스트랩_테이블.html" title="테이블관련">테이블관련</a></dd>
-      <dd><a href="./0220/04부트스트랩_이미지.html" title="이미지관련">이미지관련</a></dd>
+      <dd><a href="./0214/01Bootstrap.html" title="소개와사용">부트스트랩 소개와 사용법</a></dd>
+      <dd><a href="./0220/01그리드레이아웃.html" title="그리드레이아웃">1.그리드 레이아웃(반응형)</a></dd>
+      <dd><a href="./0220/02부트스트랩.html" title="텍스트관련">2.텍스트관련</a></dd>
+      <dd><a href="./0220/03부트스트랩_테이블.html" title="테이블관련">3.테이블관련</a></dd>
+      <dd><a href="./0220/04부트스트랩_이미지.html" title="이미지관련">4.이미지관련</a></dd>
       <dd><a href="./0220/exec(반응형그리드 갤러리).html" title="실습">실습_반응형 갤러리 구현</a></dd>
       
       <dt class="bgcolor01">부트스트랩 - 2일차</dt>
-      <dd><a href="./0221/05_점보트론.html" title="점보트론">6.점보트론</a></dd>
+      <dd><a href="./0221/05_점보트론.html" title="점보트론">5.점보트론과 6.둥근모서리</a></dd>
       <dd><a href="./0221/07_경고메시지와 닫기.html" title="경고메시지와닫기">7.경고메시지와 닫기</a></dd>
       <dd><a href="./0221/08_버튼과 09버튼그룹.html" title="버튼과 버튼그룹">8.버튼과 9.버튼그룹</a></dd>
       <dd><a href="./0221/exec01_login.html" title="모달로그인">실습_모달 로그인</a></dd>
